; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_mutex.c_malloc_mutex_postfork_child.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_mutex.c_malloc_mutex_postfork_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [50 x i8] c"<jemalloc>: Error re-initializing mutex in child\0A\00", align 1
@opt_abort = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @malloc_mutex_postfork_child(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @malloc_mutex_init(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = call i32 @malloc_printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %8 = load i64, i64* @opt_abort, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %6
  %11 = call i32 (...) @abort() #3
  unreachable

12:                                               ; preds = %6
  br label %13

13:                                               ; preds = %12, %1
  ret void
}

declare dso_local i64 @malloc_mutex_init(i32*) #1

declare dso_local i32 @malloc_printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
